force-app/main/default/objects/custom_create139__c/custom_create139__c.object-meta.xml
<CustomObject>
    <label>Custom created object139</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects139</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>