force-app/main/default/objects/custom_create139__c/fields/custom_create_139field535__c.field-meta.xml
<CustomField>
    <fullName>custom_create_139field535__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 139field535</label>
    <type>Checkbox</type>
</CustomField>